add deployment scripts; change path in tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,5 +25,5 @@ set -g @onedark_widgets "#{free_mem}; #{uptime}"
 set -g @onedark_date_format "%D"
 
 # Theme
-run-shell /home/sam/github/tmux-onedark-theme/tmux-onedark-theme.tmux
-run-shell /home/sam/github/tmux-status-variables/tmux-status-variables.tmux
+run-shell ~/github/tmux-onedark-theme/tmux-onedark-theme.tmux
+run-shell ~/github/tmux-status-variables/tmux-status-variables.tmux
