some linux tweaks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,3 +27,6 @@ set -g @onedark_date_format "%D"
 # Theme
 run-shell ~/github/tmux-onedark-theme/tmux-onedark-theme.tmux
 run-shell ~/github/tmux-status-variables/tmux-status-variables.tmux
+
+# display setting?
+set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
