remote jupyter kernel stuff; tmux config stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
@@ -15,6 +16,8 @@ set -g default-terminal "screen-256color"
 
 # mouse scrolling
 set -g mouse on
+set -g @scroll-speed-num-lines-per-scroll 5
+
 
 # BELOW: Downloaded theme.
 # https://github.com/odedlaz/tmux-onedark-theme
@@ -30,3 +33,10 @@ run-shell ~/github/tmux-status-variables/tmux-status-variables.tmux
 
 # display setting?
 set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+
+# Plugin loading
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
+run '~/.tmux/plugins/tpm/tpm'
