tmux changes/adds:

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind '|' split-window -h
+bind '-' split-window -v
 unbind '"'
-unbind %
+unbind '%'
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
