--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,37 +4,23 @@ bind '-' split-window -v
 unbind '"'
 unbind '%'
 
-# switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# Plugin loading
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
-# Color
-set -g default-terminal "screen-256color"
+# Theme config
+set -g @themepack 'powerline/block/gray'
 
 # mouse scrolling
 set -g mouse on
 set -g @scroll-speed-num-lines-per-scroll 5
 
-# BELOW: Downloaded theme.
-# https://github.com/odedlaz/tmux-onedark-theme
-# The ordering of these commands is very important!
-
-# Widgets in theme
-set -g @onedark_widgets "#{free_mem}; #{uptime}"
-set -g @onedark_date_format "%D"
-
-# Theme
-run-shell ~/github/tmux-onedark-theme/tmux-onedark-theme.tmux
-run-shell ~/github/tmux-status-variables/tmux-status-variables.tmux
-
 # display setting?
 set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 
-# Plugin loading
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-
-run '~/.tmux/plugins/tpm/tpm'
+# Press prefix + I (capital i, as in Install) to fetch the plugin. 
+run -b '~/.tmux/plugins/tpm/tpm'
