--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,8 @@
+# remap prefix key
+unbind-key C-b
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
+
 # split panes using | and -
 bind '|' split-window -h
 bind '-' split-window -v
