--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,10 @@ set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
 # split panes using | and -
-bind '|' split-window -h
+bind '\' split-window -h
+bind '|' split-window -hf
 bind '-' split-window -v
+bind '_' split-window -vf
 unbind '"'
 unbind '%'
 
