image.nvim; quarto; inprogress

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 # default terminal
 set -g default-terminal "tmux-256color"
+# Set for image.nvim
+set -gq allow-passthrough on
+set -g visual-activity off
 
 # remap prefix key
 unbind-key C-b
