--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,10 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# tmux-resurrect settings
+set -g @resurrect-processes 'ssh bundle'
 
 # Theme config
 set -g @themepack 'powerline/block/gray'
